syntax = "proto3";

package api.v1;

import "api/v1/options.proto";
import "api/v1/shared.proto";
import "api/v1/workouts.proto";

import "google/protobuf/timestamp.proto";

import "buf/validate/validate.proto";

service FeedService {
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse) {
    option (auth) = true;
  }
}

message ListItemsRequest {
  PaginationRequest pagination = 1 [(buf.validate.field).required = true];
}
message ListItemsResponse {
  repeated FeedItem items = 1;
  PaginationResponse pagination = 2;
}

message FeedItem {
  oneof type {
    Workout workout = 1;
  }
}
