syntax = "proto3";

package api.v1;

import "api/v1/options.proto";
import "api/v1/exercise.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "buf/validate/validate.proto";

service RoutineService {
  rpc Create(CreateRoutineRequest) returns (CreateRoutineResponse) {
    option (auth) = true;
  }
  rpc Get(GetRoutineRequest) returns (GetRoutineResponse) {
    option (auth) = true;
  }
  rpc Update(UpdateRoutineRequest) returns (UpdateRoutineResponse) {
    option (auth) = true;
  }
  rpc Delete(DeleteRoutineRequest) returns (DeleteRoutineResponse) {
    option (auth) = true;
  }
  rpc List(ListRoutinesRequest) returns (ListRoutinesResponse) {
    option (auth) = true;
  }
  rpc AddExercise(AddExerciseRequest) returns (AddExerciseResponse) {
    option (auth) = true;
  }
  rpc RemoveExercise(RemoveExerciseRequest) returns (RemoveExerciseResponse) {
    option (auth) = true;
  }
}

message CreateRoutineRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  repeated string exercise_ids = 2 [(buf.validate.field).repeated.min_items = 1];
}
message CreateRoutineResponse {
  string id = 1;
}

message GetRoutineRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message GetRoutineResponse {
  Routine routine = 1;
}

message UpdateRoutineRequest {
  Routine routine = 1 [(buf.validate.field).required = true];
  google.protobuf.FieldMask update_mask = 2;
}
message UpdateRoutineResponse {
  Routine routine = 1;
}

message DeleteRoutineRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}
message DeleteRoutineResponse {}

message ListRoutinesRequest {
  string name = 1;
  int32 page_limit = 2 [(buf.validate.field).int32 = { gte: 1, lte: 100 }];
  bytes page_token = 3;
}
message ListRoutinesResponse {
  repeated Routine routines = 1;
  bytes next_page_token = 2;
}

message AddExerciseRequest {
  string routine_id = 1 [(buf.validate.field).string.uuid = true];
  string exercise_id = 2 [(buf.validate.field).string.uuid = true];
}
message AddExerciseResponse {}

message RemoveExerciseRequest {
  string routine_id = 1 [(buf.validate.field).string.uuid = true];
  string exercise_id = 2 [(buf.validate.field).string.uuid = true];
}
message RemoveExerciseResponse {}

message Routine {
  string id = 1;
  string name = 2;
  repeated Exercise exercises = 3;
}


